[tool.poetry]
name = "multi-agent-alpha"
version = "0.1.0"
description = "Multi Agents Alpha is a robust, open-source framework designed for building, managing, and deploying intelligent multi-agent systems. This package provides a flexible and modular architecture that allows developers to create custom agents equipped with various tools and capabilities, all while ensuring best practices in code quality, testing, and continuous integration. With built-in support for non-commercial use, strict adherence to PEP standards, and a strong focus on community contributions, Agents Repo is ideal for both academic research and non-commercial projects. Whether you're developing AI-driven workflows or experimenting with new agent-based models, this package offers the foundation you need to build sophisticated, scalable agent systems with ease."
authors = ["Nishchal Gaba <nishgaba.ai@gmail.com>"]
license = "CC-BY-NC-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.2.1"
langchain = "^0.2.14"
numpy = "^1.26.0"
pandas = "^2.2.2"
fastapi = "^0.112.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.11.1"
pre-commit = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
